fix user view layout issue

--- a/src/components/userview.scss
+++ b/src/components/userview.scss
@@ -14,7 +14,10 @@
     background-color: #EF9A9A;
     color:white;
     display:block;
-    width:40%;
+    width:90%;
+    @media screen and (min-width: 800px) {
+      width:60%;
+    }
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
     .label,
     .about{
@@ -22,8 +25,8 @@
       pre{
         width:100%;
         font-size:1.4rem;
-         white-space: pre-wrap; 
-      word-wrap: break-word;
+        white-space: pre-wrap;
+        word-wrap: break-word;
       }
     }
   }
@@ -46,6 +49,7 @@
         background-color: #1e88e5;
         color: white;
         transition: background-color .3s;
+        width:200px;
         &:hover,
         &:focus {
           background-color: #1565c0;
